# isdown

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: release-binaries.yml  rust-lint-fmt.yml  rust.yml
src/: check.rs  lib.rs  main.rs  planner.rs  registry.rs  target.rs  watch.rs
src/check/: aws.rs  github.rs  slack.rs  statuspageio.rs  url.rs
