[package]
name = "isdown"
version = "0.2.0"
edition = "2024"
authors = [
    "Dariush Moshiri <dariush.moshiri@outlook.com>"
]

[dev-dependencies]
httpmock = "0.7"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
phf = { version = "0.13.1", features = ["macros"] }
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.2", features = ["full"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
serde_json = "1.0.149"
futures = "0.3.32"
colored = "2"
serde = { version = "1.0.228", features = ["derive"] }
encoding_rs = "0.8.35"
