[package]
name = "isdown"
description = "Check if a service is down or not."
repository = "https://github.com/dariush624/isdown"
homepage = "https://github.com/dariush624/isdown"
license = "MIT"
categories = [
    "command-line-utilities",
    "network-programming",
    "monitoring",
    "utilities"]
keywords = [
    "cli",
    "utility",
    "monitoring",
    "downtime", 
    ]
version = "0.4.1"
edition = "2024"
authors = [
    "Dariush Moshiri <dariush.moshiri@outlook.com>"
]

exclude = [".github/", ".idea/", ".release-please-manifest.json", "release-please-config.json"]

[dev-dependencies]
httpmock = "0.7"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
phf = { version = "0.13.1", features = ["macros"] }
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.2", features = ["full"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
serde_json = "1.0.149"
futures = "0.3.32"
colored = "2"
serde = { version = "1.0.228", features = ["derive"] }
encoding_rs = "0.8.35"
duration-str = "0.21.0"
